--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Mason Schleu | Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/mschleu/resume/raw/master/MasonSchleuResume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/mschleu/resume/raw/master/resume-v2.0.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
